Git Tests/force-app/main/default/default/objects/Timeline__c/Timeline__c.object-meta.xml
<CustomObject>
    <label>Timeline</label>
    <nameField>
        <label>Timeline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>