Git Tests/force-app/main/default/default/objects/Timeline__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Timelines</relationshipLabel>
    <relationshipName>Timelines</relationshipName>
    <type>Lookup</type>
</CustomField>