Git Tests/force-app/main/default/default/objects/Timeline__c/fields/Elapsed_days__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_days__c</fullName>
    <label>Elapsed days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>