Git Tests/force-app/main/default/default/objects/Timeline__c/fields/Elapsed_hours__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_hours__c</fullName>
    <label>Elapsed hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>