Git Tests/force-app/main/default/default/objects/Timeline__c/fields/Elapsed_milisenconds__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_milisenconds__c</fullName>
    <label>Elapsed milisenconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>