Git Tests/force-app/main/default/default/objects/Timeline__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <label>End date</label>
    <type>DateTime</type>
</CustomField>