Git Tests/force-app/main/default/default/objects/Timeline__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <label>Start date</label>
    <type>DateTime</type>
</CustomField>